diesel_compile_tests/tests/fail/derive_deprecated/deprecated_primary_key.stderr
error: expected `,`
  --> tests/fail/derive_deprecated/deprecated_primary_key.rs:12:23
   |
LL | #[primary_key(id, bar = "baz")]
   |                       ^

error: expected `,`
  --> tests/fail/derive_deprecated/deprecated_primary_key.rs:20:22
   |
LL | #[primary_key(id, qux(id))]
   |                      ^

error: unexpected end of input, expected parentheses
  --> tests/fail/derive_deprecated/deprecated_primary_key.rs:28:3
   |
LL | #[primary_key]
   |   ^^^^^^^^^^^

error: expected parentheses
  --> tests/fail/derive_deprecated/deprecated_primary_key.rs:36:15
   |
LL | #[primary_key = id]
   |               ^

warning: #[primary_key] attribute form is deprecated
  = help: use `#[diesel(primary_key(id, name))]` instead

error: Deriving `AsChangeset` on a structure that only contains primary keys isn't supported.
       help: If you want to change the primary key of a row, you should do so with `.set(table::id.eq(new_id))`.
       note: `#[derive(AsChangeset)]` never changes the primary key of a row.
  --> tests/fail/derive_deprecated/deprecated_primary_key.rs:44:10
   |
LL | #[derive(AsChangeset)]
   |          ^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `AsChangeset` (in Nightly builds, run with -Z macro-backtrace for more info)

error: attribute value must be a literal
  --> tests/fail/derive_deprecated/deprecated_primary_key.rs:36:17
   |
LL | #[primary_key = id]
   |                 ^^
